make multipart upload like a standard flow (#23)
* make multipart upload like a standard flow

* add deprecated

* add deprecated (2)

---------

Co-authored-by: ggmaleva <ggmaleva@yandex.ru>